新增日記顯示

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <meta property="og:type" content="website">
     <!--meta(property="og:url" content="https://jarvis.huihuidesign.com.tw/jarvis-course/megaport/")-->
-    <meta property="og:image" content="img/logo/mood.jpg">
+    <meta property="og:image" content="img/logo/mood.png">
     <meta property="og:description" content="隨時記錄自己的心情, 察覺情緒是很重要的喔！">
     <meta name="description" content="隨時記錄自己的心情, 察覺情緒是很重要的喔！">
-    <link rel="shortcut icon" href="img/logo/mood.jpg" type="image/jpg">
-    <link rel="apple-touch-icon" href="img/logo/mood.jpg">
+    <link rel="shortcut icon" href="img/logo/mood.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo/mood.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!--link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous")-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
@@ -26,8 +26,75 @@
     <header class="l-header">
       <div class="l-card">
         <div class="title">日記</div>
-        <div class="month">9月</div>
-        <div class="c-card"> </div>
+        <div class="c-card"> 
+          <div class="month s1">還沒有日記喔！</div>
+          <div class="c-card_small card_5">
+            <div class="left card_5"> 
+              <div class="date card_5"> </div>
+              <div class="month card_5"></div>
+              <div class="time card_5"></div>
+              <div class="emo_icon card_5"></div>
+            </div>
+            <div class="right card_5">
+              <div class="arr_event card_5"> </div>
+              <div class="arr_word card_5"></div>
+              <div class="diary card_5"></div>
+            </div>
+          </div>
+          <div class="c-card_small card_4">
+            <div class="left card_4"> 
+              <div class="date card_4"> </div>
+              <div class="month card_4"> </div>
+              <div class="time card_4"></div>
+              <div class="emo_icon card_4"></div>
+            </div>
+            <div class="right card_4">
+              <div class="arr_event card_4"> </div>
+              <div class="arr_word card_4"></div>
+              <div class="diary card_4"></div>
+            </div>
+          </div>
+          <div class="month s1">12月</div>
+          <div class="c-card_small card_3">
+            <div class="left card_3"> 
+              <div class="date card_3"> </div>
+              <div class="month card_3"></div>
+              <div class="time card_3"> </div>
+              <div class="emo_icon card_3"></div>
+            </div>
+            <div class="right card_3">
+              <div class="arr_event card_3"> </div>
+              <div class="arr_word card_3"></div>
+              <div class="diary card_3"></div>
+            </div>
+          </div>
+          <div class="c-card_small card_2">
+            <div class="left card_2"> 
+              <div class="date card_2"> </div>
+              <div class="month card_2"> </div>
+              <div class="time card_2"></div>
+              <div class="emo_icon card_2"></div>
+            </div>
+            <div class="right card_2">
+              <div class="arr_event card_2"> </div>
+              <div class="arr_word card_2"></div>
+              <div class="diary card_2"></div>
+            </div>
+          </div>
+          <div class="c-card_small card_1">
+            <div class="left card_1"> 
+              <div class="date card_1"> </div>
+              <div class="month card_1"></div>
+              <div class="time card_1"> </div>
+              <div class="emo_icon card_1"></div>
+            </div>
+            <div class="right card_1">
+              <div class="arr_event card_1"> </div>
+              <div class="arr_word card_1"></div>
+              <div class="diary card_1"></div>
+            </div>
+          </div>
+        </div>
         <div class="bottom">
           <div class="btn_add">+ 添加一篇</div>
           <div class="gradient"></div>
@@ -93,6 +160,7 @@
       </div>
     </header>
     <script src="js/main.js"></script>
+    <script src="js/card.js"></script>
     <script src="js/diary.js"></script>
     <script src="js/emotion.js"></script>
     <script src="https://kit.fontawesome.com/175bc02a93.js" crossorigin="anonymous"></script>
