--- a/diary.html
+++ b/diary.html
@@ -8,11 +8,11 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <meta property="og:type" content="website">
     <!--meta(property="og:url" content="https://jarvis.huihuidesign.com.tw/jarvis-course/megaport/")-->
-    <meta property="og:image" content="img/logo/mood.jpg">
+    <meta property="og:image" content="img/logo/mood.png">
     <meta property="og:description" content="隨時記錄自己的心情, 察覺情緒是很重要的喔！">
     <meta name="description" content="隨時記錄自己的心情, 察覺情緒是很重要的喔！">
-    <link rel="shortcut icon" href="img/logo/mood.jpg" type="image/jpg">
-    <link rel="apple-touch-icon" href="img/logo/mood.jpg">
+    <link rel="shortcut icon" href="img/logo/mood.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo/mood.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!--link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous")-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
@@ -130,6 +130,7 @@
       </div>
     </header>
     <script src="js/main.js"></script>
+    <script src="js/card.js"></script>
     <script src="js/diary.js"></script>
     <script src="js/emotion.js"></script>
     <script src="https://kit.fontawesome.com/175bc02a93.js" crossorigin="anonymous"></script>
